--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -6,20 +6,24 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.4",
+    "@nivo/treemap": "^0.88.0",
+    "@react-leaflet/core": "^2.1.0",
     "@tanstack/react-query": "^5.59.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
-    "chart.js": "^4.4.5",
+    "chart.js": "^4.4.6",
     "d3": "^7.9.0",
     "firebase": "^10.14.1",
+    "leaflet": "^1.9.4",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
     "react-d3-library": "^1.1.8",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
@@ -27,7 +31,8 @@
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.0",
     "victory": "^37.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "world-atlas": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
