--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,31 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
-    "@mui/material": "^6.1.8",
-    "@nivo/bar": "^0.88.0",
-    "@nivo/core": "^0.88.0",
-    "@nivo/line": "^0.88.0",
-    "@nivo/pie": "^0.88.0",
-    "@nivo/treemap": "^0.88.0",
-    "@react-leaflet/core": "^2.1.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.4",
     "@tanstack/react-query": "^5.59.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
-    "chart.js": "^4.4.6",
+    "chart.js": "^4.4.5",
     "d3": "^7.9.0",
     "firebase": "^10.14.1",
-    "leaflet": "^1.9.4",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
     "react-d3-library": "^1.1.8",
     "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
@@ -35,8 +27,7 @@
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.0",
     "victory": "^37.2.0",
-    "web-vitals": "^2.1.4",
-    "world-atlas": "^2.0.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
