--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -7,5 +7,5 @@ build = "npm install && npm run build"
 output = "frontend/build"
 
 [backend]
-build = "mvn clean install"  # Or for Gradle: "./gradlew build"
-output = "backend/target"    # You can change this depending on your backend build output directory
+build = "mvn clean install"  
+output = "backend/target"
